# agentpass

./: .gitignore  LICENSE  README.md  SECURITY.md  SPIDERMAP.md  STRATEGY.md  TODO.md  ai-instructions.md  pyproject.toml
.github/ISSUE_TEMPLATE/: onboarding_friction.yml
.github/workflows/: ci.yml
AI運営OS用/docs/: AI_INSTRUCTIONS.md  API_SPEC.md  ARCHITECTURE.md  BUSINESS_PLAN.md  CHANGELOG.md  CLAUDE_CODE_WORKFLOW.md  CONTRIBUTING.md  DECISIONS.md  EXPERIMENT_LOG.md  MASTER_STATUS.md  README.md  ROADMAP.md  TESTING_POLICY.md
docs/: DECISIONS.md
examples/: .env.example  Dockerfile  README.md  agent_client.py  docker-compose.yml  merchant_api.py  sandbox_agent.py  sandbox_merchant.py
src/agentpass/: __init__.py
src/agentpass/sandbox/: __init__.py  agent_key_registry.py  audit_log.py  (+7 more)
src/core/: __init__.py  agentpass_crawler.py  anomaly_detector.py  authorization_middleware.py  circuit_breaker.py  token_issuer.py  token_verifier.py
src/identity/: __init__.py  agent_signer.py  credit_scorer.py
src/merchant/: agentpass_crawler.py  authorization_middleware.py
tests/: test_agent_signer.py  test_agentpass_crawler.py  test_anomaly_detector.py  test_authorization_middleware.py  test_circuit_breaker.py  test_core_authorization_middleware.py  test_credit_scorer.py  test_token_issuer.py  test_token_verifier.py
tests/e2e/: test_agentpass_ecosystem.py
tests/sandbox/: test_budget_exceeded_returns_402.py  test_budget_rejection_audit_log.py  test_budget_replay.py  test_exp005b_jti_collision.py  test_exp005c_agent_keypair_isolation.py  test_exp006_burst_freeze.py
