[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpass"
version = "1.0.0-beta2"
description = "M2M Wallet & Passport Infrastructure for AI Agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AgentPass Contributors"},
]
requires-python = ">=3.13"
keywords = ["ai-agents", "m2m", "jwt", "authentication", "middleware", "payments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: FastAPI",
]
dependencies = [
    "PyJWT[crypto]>=2.10",
    "cryptography>=44",
    "httpx>=0.28",
    "pydantic>=2.10",
    "fastapi>=0.115",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "respx>=0.21",
    "anyio[trio]>=4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["merchant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
